--- a/tesi/presentation/presentation.tex
+++ b/tesi/presentation/presentation.tex
@@ -7,7 +7,7 @@
 \usepackage{bera}
 \usepackage{amsmath}
 \usepackage{xcolor}
-
+\usepackage{multicol}
 \definecolor{codegreen}{rgb}{0,0.6,0}
 \definecolor{codegray}{rgb}{0.5,0.5,0.5}
 \definecolor{codepurple}{rgb}{0.58,0,0.82}
@@ -35,6 +35,12 @@
     morestring=[b]",
     sensitive=true
 }
+\lstdefinelanguage{HLCostLan}{
+    keywords= {service,struct,fn, call, if, else, return},
+    keywordstyle = \color{blue}\bfseries,
+    sensitive=true,
+    morestring=[b]",
+}
 \lstdefinestyle{custombeamer}{
     backgroundcolor=\color{backcolour},   
     commentstyle=\color{codegreen},
@@ -56,8 +62,7 @@
 
 \graphicspath{ {../img/} }
 
-\title[CostCompiler]{Un Prototipo per lo scheduling di funzioni basato su analisi di costo in piattaforme serverless}
-\subtitle{Sviluppo di un interprete per l'analisi di costo di funzioni serverless}
+\title[CostCompiler]{Un prototipo per lo scheduling di funzioni basato su analisi di costo in piattaforme serverless}
 \author{Simone Boldrini}
 \date{14 Marzo 2024}
 \institute[]{Alma Mater Studiorum - Università di Bologna \\ Facoltà di Scienze}
@@ -72,9 +77,9 @@
 
 \begin{frame}
     \frametitle{Introduzione}
-    \alert{Obiettivo}: Sviluppare un prototipo di compilatore per piattaforme serverless che sfrutti tecniche di analisi di costo per ottimizzare l'esecuzione di funzioni.
+    \alert{Obiettivo}: Sviluppare un compilatore per funzioni serverless che sfrutti tecniche di analisi di costo per ottimizzare l'esecuzione.
     \begin{itemize}
-        \item<1-> Definizione grammatica specifica 
+        \item<1-> Definizione di HLCostLan
         \item<2-> Analisi del programma
         \item<3-> Generazione equazioni di costo 
         \item<4-> Generazione del codice WASM
@@ -82,17 +87,24 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{cAPP Scheme}
+    \frametitle{Esempio cAPP + CostCompiler}
     \begin{figure}
         \centering
-        \includegraphics[width=0.9\textwidth]{app_schema.png}
+        \includegraphics[width=0.9\textwidth]{capp_schema_wasm.png}
+    \end{figure}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Esempio cAPP + CostCompiler}
+    \begin{figure}
+        \centering
+        \includegraphics[width=0.9\textwidth]{capp_schema_worker_sel.png}
     \end{figure}
 \end{frame}
 
 \begin{frame}[fragile]
-    \frametitle{Definizione della grammatica}
-    Abbiamo definito una grammatica specifica $HLCostLan$ per la defizione di un linguaggio di alto livello per la definizione di funzioni serverless.
-    \begin{lstlisting}[language=Java, caption={Listing8}]
+    \frametitle{Esempio di funzioni in HLCostLan}
+    \begin{lstlisting}[language=HLCostLan, caption={Listing8}]
     struct Params {
         address: array[int],
         payload: any,
@@ -111,30 +123,14 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{Analisi del programma}
-    Una volta definito il linguaggio, abbiamo sviluppato un interprete per l'analisi del programma.
-    Quest'analisi prevede:
-    \begin{itemize}
-        \item<1-> Analisi lessicale e sintattica(Riconosciuta da ANTLR)
-        \item<2-> Analisi semantica 
-    \end{itemize}
-\end{frame}
-
-\begin{frame}
-    \frametitle{Generazione equazioni di costo}
-    Una volta analizzato il programma, abbiamo sviluppato un interprete per la generazione delle equazioni di costo.
-\end{frame}
-
-\begin{frame}
     \frametitle{Analisi di costo}
+    \begin{itemize}
+        \item Il compilatore ritorna un insieme di equazioni di costo, che sono adeguate per un Cost-Analyzer.
+        \item Il Cost-Analyzer calcola il costo di esecuzione di un programma in base alle equazioni di costo.
+        \item Il Cost Analyzer scelto è PUBS
+        \item I risultati vengono presi dal sistema cAPP permettendo l'allocazione degli scheduling ottimali per le piattaforme serverless.
+    \end{itemize}
     
-    \newtheorem{Analisi di costo}{Analisi di costo}
-
-    \begin{Analisi di costo}
-        Come \alert{analisi statica dei costi} miriamo ad ottenere risultati analitici per un dato programma $P$, i quali consentono di vincolare il costo dell'esecuzione di $P$ su qualsiasi input $x$, senza dover effettivamente eseguire $P(x)$.
-    \end{Analisi di costo}
-   
-    PUBS ha l'obiettivo di ottenere automaticamente un upper bound in forma chiusa per i sistemi di equazioni di costo, calcolando i limiti superiri per la relazione di costo indicata come ``entry'', oltre che per tutte le altre relazioni da cui tale ``entry'' dipende.
 \end{frame}
 
 \begin{frame}
@@ -153,16 +149,22 @@
     \end{itemize}
 \end{frame}
 \begin{frame}[fragile]
-    \frametitle{Analisi di costo}
+    \frametitle{Esempio Cost Equation}
 \begin{lstlisting}[language=Java, caption={Equazioni di costo per Listing 8}]
 eq(main(P,ISPREMIUMUSER0,B),0,[if9(ISPREMIUMUSER0,P,B)],[]).
 eq(if9(ISPREMIUMUSER0,P,B),nat(P),[],[ISPREMIUMUSER0=1]).
 eq(if9(ISPREMIUMUSER0,P,B),nat(B),[],[ISPREMIUMUSER0=0]).
 \end{lstlisting}
+Eseguendo PUBS infine otteniamo:\\
+\bigskip
+$pubs\_aux\_entry$(A,B,C) -- THE MAIN ENTRY
+
+  * Non Asymptotic Upper Bound: max([nat(C),nat(A)]) 
 \end{frame}
 \begin{frame}
     \frametitle{Generazione del codice WASM}
-    Una volta ottenute le equazioni di costo, abbiamo sviluppato un interprete per la generazione del codice WASM.
+    Una volta ottenute le equazioni di costo, abbiamo sviluppato un interprete per la generazione del codice WASM.\\
+
 \end{frame}
 \begin{frame}
     \frametitle{WebAssembly}
@@ -172,8 +174,8 @@ eq(if9(ISPREMIUMUSER0,P,B),nat(B),[],[ISPREMIUMUSER0=0]).
 \end{frame}
 \begin{frame}[fragile]
     \frametitle{Esempio HLCostLan}
-    \begin{lstlisting}[language=Java, caption={Esempio di funzione HLCostLan, Listing15}]
-        fn svc(i: int, n:int) -> any{
+    \begin{lstlisting}[language=HLCostLan, caption={Esempio di funzione HLCostLan, Listing15}]
+    fn svc(i: int, n:int) -> any{
             return n * i
      }
      (len : int) => {
@@ -205,7 +207,24 @@ eq(if9(ISPREMIUMUSER0,P,B),nat(B),[],[ISPREMIUMUSER0=0]).
     )
         \end{lstlisting}
 \end{frame}
-
+\begin{frame}
+    \frametitle{Vantaggi e Svantaggi di WASM}
+    \begin{multicols}{2}
+         \alert{Vantaggi}:
+        \begin{itemize}
+            \item \alert{Velocità}: progettato per essere eseguito in modo efficiente su hardware moderno.
+            \item \alert{Sicurezza}: progettato per essere eseguito in un ambiente sandbox.
+            \item \alert{Portabilità}: progettato per essere eseguito su qualsiasi piattaforma.
+        \end{itemize}
+        \columnbreak
+        \alert{Svantaggi}:
+        \begin{itemize}
+            \item \alert{Complessità}:linguaggio a basso livello, quindi è più difficile da scrivere e leggere rispetto ad altri linguaggi.
+            \item \alert{Mancanza di supporto}:  è relativamente nuovo, quindi non tutti i browser e le piattaforme lo supportano.
+        \end{itemize}
+        
+    \end{multicols}
+\end{frame}
 \begin{frame}
     \frametitle{Conclusioni}
     \begin{itemize}
